--- a/classes/page/responsive.css
+++ b/classes/page/responsive.css
@@ -65,8 +65,8 @@ code {
     margin: 3px 0 1px 24px;
 }
 .parent {
-    width: 300px;
-    height: 300px;
+    width: 360px;
+    height: 360px;
     padding: 15px;
     box-sizing: border-box;
     background-color: aquamarine;
@@ -127,6 +127,9 @@ code {
     }
     .cp-info, .parent {
         width: 100%;
+    }
+    .parent {
+        height: 400px;
     }
     
     th {
